--- a/pikachu/style.css
+++ b/pikachu/style.css
@@ -16,18 +16,53 @@
   }
   .preview-wrapper{
       flex:1;
-      height: 50%;
+      height: 50vh;
+     
   }
   .code-wrapper{
       flex: 1;
-      height: 50%;
+      height: 50vh;
       padding: 10px;
+      background: #ddd;
   }
   #code{
       overflow: auto;
       /*注意Firefox中需要填写*/
       height: 50vh;
   }
+  .actions{
+      display: flex;
+      flex-direction: column;
+      position: absolute;
+      top: 20px;
+      right:40px;
+  }
+  .actions>div{
+      margin: 5px 0;
+  }
+  .key{
+      cursor: pointer;
+    width: 50px;
+    height: 40px;
+    background: linear-gradient(to bottom, #666666 0%,#100000 100%);
+    border: none;
+    color: #C5C5C5;
+    border: 1px solid #373737;
+    border-radius: 8px;
+    /*box-shadow四个值分别是水平、垂直、模糊度、扩展面积、颜色*/
+    box-shadow: 0 0 0 1px #1A1B1C,0 0 0 2px #1F2020, 2px 2px 0 2px #080808; 
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 13px;
+    font-family: Helvetica, sans-serif;
+    position: relative;
+}
+.key.active{
+    font-family: 20px;
+    color: #fee433;
+}
+
   /* .preview {
     height: 100%;
     display: flex;
